# fad.rs

./: Cargo.toml
src/: fad.rs  generate_ensemble_cos_noop.rs  generate_ensemble_cos_recompactify.rs  generate_ensemble_ho.rs  generate_ensemble_ho_noop.rs  generate_ensemble_ho_recompactify.rs  lib.rs
