[package]
name = "fad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
rand_pcg = "*"
rand = "*"
rand_distr = "*"

[lib]
name = "fad"
path = "src/fad.rs"

[[bin]]
name = "generate_ensemble_ho"
path = "src/generate_ensemble_ho.rs"
