[package]
name = "fad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
rand_pcg = "*"
rand = "*"
rand_distr = "*"
clap = { version = "4.5.4", features = ["derive"] }

[lib]
name = "fad"
path = "src/fad.rs"

[[bin]]
name = "generate_ensemble_ho_noop"
path = "src/generate_ensemble_ho_noop.rs"
[[bin]]
name = "generate_ensemble_cos_noop"
path = "src/generate_ensemble_cos_noop.rs"
[[bin]]
name = "generate_ensemble_ho_recompactify"
path = "src/generate_ensemble_ho_recompactify.rs"
[[bin]]
name = "generate_ensemble_cos_recompactify"
path = "src/generate_ensemble_cos_recompactify.rs"

[profile.release]
opt-level = 3
